--- a/src/app/catagory/catagory.component.html
+++ b/src/app/catagory/catagory.component.html
@@ -1,12 +1,9 @@
-<h3>{{title}}</h3>
+<div class="nav-scroller py-1 mb-2">
+    <nav class="nav d-flex justify-content-between">
+        <a class="p-2 text-muted" 
+            routerLink="/products/">Tüm Ürünler</a>
+        <a class="p-2 text-muted" *ngFor="let catagory of catagoryies"
+            routerLink="/products/catagory/{{catagory.id}}">{{catagory.name}}</a>
 
-<div class="list-group">
-
-    <a class="list-group-item active">Tüm Ürünler</a>
-</div>
-
-<div class="list-group" *ngFor="let catagory of catagoryies">
-
-
-    <a class="list-group-item"> {{catagory.name}}</a>
+    </nav>
 </div>
