--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,6 @@
-<h3 *ngIf="products;else noProduct">{{title}}</h3>
+<!-- <h3 *ngIf="products;else noProduct">{{title}}</h3> -->
+
+<app-catagory></app-catagory>
 <div class="form-group">
 
 
@@ -18,7 +20,7 @@
         </div>
 
     </ng-template>
-    <div *ngFor="let product of products | productFilter:filterText" class="card" style="width: 18rem;">
+    <div *ngFor="let product of products | productFilter:filterText" class="productbox" style="width: 18rem;">
         <img [src]="product.imageUrl" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">{{product.name}} {{product.price | currency:"USD"}}</h5>
