--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <body>
   <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">E-Ticaret App</a>
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
-        <a class="nav-link" href="#">Sign out</a>
+        <a class="nav-link" routerLink="/login">Login</a>
       </li>
     </ul>
-  </nav>
+  </nav>  
 
 
   <div class="container-fluid">
@@ -16,21 +16,22 @@
         <div class="sidebar-sticky">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">
+              <a class="nav-link active" routerLink="/products">
                 <span data-feather="home"></span>
-                Dashboard <span class="sr-only">(current)</span>
+                 <span class="sr-only">(current)</span>
+                 Mağaza
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" routerLink="/products/add-form1">
                 <span data-feather="file"></span>
-                Orders
+                Ürün Ekle / Klasik Form
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" routerLink="/products/add-form2">
                 <span data-feather="shopping-cart"></span>
-                Products
+                Ürün Ekle / Reactive Form
               </a>
             </li>
             <li class="nav-item">
