--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -20,7 +20,7 @@
         </div>
 
     </ng-template>
-    <div *ngFor="let product of products | productFilter:filterText" class="productbox" style="width: 18rem;">
+    <div *ngFor="let product of products | productFilter:filterText" class="productbox" >
         <img [src]="product.imageUrl" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">{{product.name}} {{product.price | currency:"USD"}}</h5>
